# intent-signal-update

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  main.py  models.py  research.py  schemas.py  scoring.py  services.py
data/: sample_signals.csv
docs/: architecture.md
skills/: README.md
tests/: conftest.py  test_app.py  test_research.py  test_research_thorough.py
