[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intent-signal-update"
version = "0.1.0"
description = "Evidence-backed B2B intent signal detection, scoring, account briefs, and outreach generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "sqlalchemy>=2.0.50,<2.1",
  "pydantic>=2.13,<3.0",
  "pydantic-settings>=2.14,<3.0",
  "httpx>=0.28,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "openai>=1.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
  "pytest-cov>=6.2,<7.0",
  "ruff>=0.12,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008", "I001"]
